--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: App Audits
 email: jyyam1999@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   We Audit Any Programmes of Any Size.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/app-audits" # the subpath of your site, e.g. /blog
+url: "https://juliusyam.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
