--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: jyyam1999@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   We Audit Any Programmes of Any Size.
 baseurl: "/app-audits" # the subpath of your site, e.g. /blog
-url: "https://juliusyam.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://juliusyam.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
