--- a/_config.yml
+++ b/_config.yml
@@ -19,11 +19,12 @@
 # in the templates via {{ site.myvariable }}.
 
 title: App Audits
-email: jyyam1999@gmail.com
+email: jervis@appaudits.co.uk
 description: >- # this means to ignore newlines until "baseurl:"
   We Audit Any Programmes of Any Size.
+permalink: /:categories
 baseurl: "/app-audits" # the subpath of your site, e.g. /blog
-url: "http://juliusyam.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://juliusyam.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
