--- a/_config.yml
+++ b/_config.yml
@@ -19,14 +19,11 @@
 # in the templates via {{ site.myvariable }}.
 
 title: App Audits
-email: jervis@appaudits.co.uk
 description: >- # this means to ignore newlines until "baseurl:"
-  We Audit Any Programmes of Any Size.
+  We Audit Any Application of Any Size.
 permalink: /:categories
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://juliusyam.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "//appaudits.co.uk" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 theme: minima
@@ -41,14 +38,17 @@ plugins:
 # Excluded items can be processed by explicitly listing the directories or
 # their entries' file path in the `include:` list.
 #
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+exclude:
+  - .sass-cache/
+  - .jekyll-cache/
+  - gemfiles/
+  - Gemfile
+  - Gemfile.lock
+  - node_modules/
+  - vendor/bundle/
+  - vendor/cache/
+  - vendor/gems/
+  - vendor/ruby/
+  - run.sh
+  - .gitignore
+  - .idea/
