--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: App Audits
 description: >- # this means to ignore newlines until "baseurl:"
   We Audit Any Application of Any Size.
 permalink: /:pages
-baseurl: "akrivis" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "//appaudits.co.uk" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
